SCRUM-1: chore(prod): added front-end prod url to fix CORS