@@ -120,7 +120,7 @@ public class SecurityConfig {
         CorsConfigurationSource corsConfigurationSource;
         corsConfigurationSource = request -> {
             CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+            corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000","https://project-zgowy.vercel.app/"));
             corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
             corsConfiguration.setAllowCredentials(true);
             corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
